--- a/app/src/main/res/layout/splash.xml
+++ b/app/src/main/res/layout/splash.xml
@@ -12,7 +12,7 @@
         android:id="@+id/logoAnim"
         android:layout_width="wrap_content"
         android:layout_height="381dp"
-        android:src="@drawable/image_removebg"
+        android:src="@drawable/logoimg"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
