--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -30,8 +30,10 @@
         android:layout_height="394dp"
         android:layout_alignTop="@+id/textViewAppName"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="23dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="21dp"
+        android:layout_marginTop="6dp"
+        android:layout_marginEnd="19dp"
         android:src="@drawable/logoimg" />
 
     <androidx.appcompat.widget.AppCompatButton
