--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="backgroundmain">#142C59</color>
     <color name="headerbg">#141E30</color>
+    <color name="gradient_start">#3700B3</color>
+    <color name="gradient_end">#25b8d5</color>
 
 </resources>
