--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -1,8 +1,10 @@
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".Main">
 
     <!-- Main content area with Toolbar and ScrollView -->
     <LinearLayout
@@ -10,15 +12,32 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+
+        <!-- ScrollView for content -->
+
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="#141E30"
-            app:title="MyFitnessPal" />
+            android:paddingLeft="0dp"
+            android:paddingStart="0dp">
+
+            <TextView
+                android:id="@+id/toolbar_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Home"
+                android:gravity="center"
+                android:textSize="23sp"
+                android:fontFamily="@font/inter_bold"
+                android:textColor="#FFFFFF"
+                android:paddingLeft="0dp" /> <!-- Adjust this value as needed -->
+        </androidx.appcompat.widget.Toolbar>
 
 
-        <!-- ScrollView for content -->
+
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="0dp"
@@ -42,16 +61,37 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#1E1E1E"
+            app:itemIconTint="@color/bottom_nav_colors"
+            app:itemTextColor="@color/bottom_nav_colors"
+            app:labelVisibilityMode="labeled"
             app:menu="@menu/bottom_nav_menu" />
     </LinearLayout>
 
     <!-- Navigation Drawer -->
-    <com.google.android.material.navigation.NavigationView
-        android:id="@+id/nav_view"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_gravity="start"
-        app:headerLayout="@layout/nav_header"
-        app:menu="@menu/drawer_menu" />
+        android:orientation="vertical"
+        android:layout_gravity="start">
 
+        <com.google.android.material.navigation.NavigationView
+            android:id="@+id/nav_topview"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            app:headerLayout="@layout/nav_header"
+            app:menu="@menu/drawer_menu"
+            android:background="@drawable/drawer_bg" />
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <com.google.android.material.navigation.NavigationView
+                android:layout_width="match_parent"
+                android:id="@+id/nav_bottomview"
+                android:layout_height="wrap_content"
+                app:menu="@menu/menu_bottom_drawer"
+                android:background="#FFB6A5"/>
+        </FrameLayout>
+    </LinearLayout>
 </androidx.drawerlayout.widget.DrawerLayout>
