--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -106,8 +106,38 @@
                             android:textAppearance="?android:attr/textAppearanceMedium" />
                     </RelativeLayout>
                 </androidx.cardview.widget.CardView>
+
+                <RelativeLayout
+                    android:id="@+id/tipbg"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:background="@drawable/tip_background"
+                    android:padding="16dp">
+
+                    <TextView
+                        android:id="@+id/tipTextView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="8dp"
+                        android:layout_toStartOf="@+id/closeTipButton"
+                        android:text="Tip of the day: Exercise regularly and you will see results!"
+                        android:textColor="#858C94" />
+
+                    <ImageButton
+                        android:id="@+id/closeTipButton"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:layout_alignParentTop="true"
+                        android:layout_alignParentEnd="true"
+                        android:layout_marginTop="0dp"
+                        android:layout_marginEnd="6dp"
+                        android:background="?android:attr/selectableItemBackgroundBorderless"
+                        android:src="@android:drawable/ic_delete" />
+                </RelativeLayout>
             </LinearLayout>
         </ScrollView>
+
 
         <!-- Bottom Navigation View -->
         <com.google.android.material.bottomnavigation.BottomNavigationView
