--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -4,7 +4,8 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/gradient_card"
+    android:background="#BBF246"
+    android:foregroundGravity="center"
     tools:context=".Main">
 
     <!-- Main content area with Toolbar and ScrollView -->
@@ -72,8 +73,8 @@
                             android:layout_alignParentStart="true"
                             android:layout_alignParentTop="true"
                             android:layout_marginTop="-5dp"
-                            android:text="CALORIES"
                             android:fontFamily="@font/inter_semibold"
+                            android:text="CALORIES"
                             android:textColor="#013220" />
 
                         <SeekBar
@@ -99,9 +100,9 @@
                             android:layout_marginEnd="10dp"
                             android:layout_marginBottom="0dp"
                             android:background="@drawable/circle"
+                            android:fontFamily="@font/inter_semibold"
                             android:gravity="center"
                             android:padding="5dp"
-                            android:fontFamily="@font/inter_semibold"
                             android:text="1533 Remaining"
                             android:textAppearance="?android:attr/textAppearanceMedium" />
                     </RelativeLayout>
@@ -133,9 +134,92 @@
                         android:layout_marginTop="0dp"
                         android:layout_marginEnd="6dp"
                         android:background="?android:attr/selectableItemBackgroundBorderless"
-                        android:src="@android:drawable/ic_delete" />
+                        android:src="@drawable/cross" />
+
                 </RelativeLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="80dp"
+                    android:orientation="horizontal"
+                    android:paddingStart="0dp"
+                    android:paddingEnd="0dp">
+
+                    <!-- CardView for Recommendation -->
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="90dp"
+                        android:layout_height="150dp"
+                        android:layout_marginEnd="8dp"
+                        android:layout_weight="0.5"
+                        android:background="#BBF246"
+                        app:cardCornerRadius="8dp"
+                        app:cardElevation="4dp">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:background="#BBF246"
+                            android:orientation="vertical"
+                            android:padding="16dp">
+
+                            <TextView
+                                android:layout_width="150dp"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="@font/inter_semibold"
+                                android:gravity="center"
+                                android:text="Recommendation"
+                                android:textSize="15sp" />
+
+                            <ImageView
+                                android:id="@+id/reco_add"
+                                android:layout_width="151dp"
+                                android:layout_height="92dp"
+                                android:background="#BBF246"
+                                android:src="@drawable/plus" />
+                        </LinearLayout>
+                    </androidx.cardview.widget.CardView>
+
+                    <!-- CardView for Steps -->
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:background="#191D1A"
+                        app:cardCornerRadius="8dp"
+                        app:cardElevation="4dp">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:background="#191D1A"
+                            android:orientation="vertical"
+                            android:padding="16dp">
+
+                            <TextView
+                                android:layout_width="154dp"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="@font/inter_semibold"
+                                android:gravity="center"
+                                android:text="Steps"
+                                android:textColor="#FFFFFF"
+                                android:textSize="18sp" />
+
+                            <TextView
+                                android:id="@+id/stepsTextView"
+                                android:layout_width="154dp"
+                                android:layout_height="93dp"
+                                android:fontFamily="@font/inter_semibold"
+                                android:gravity="center"
+                                android:text="0"
+                                android:textColor="#FFFFFF"
+                                android:textSize="30sp" />
+                        </LinearLayout>
+                    </androidx.cardview.widget.CardView>
+                </LinearLayout>
+
             </LinearLayout>
+
         </ScrollView>
 
 
