--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -141,80 +141,93 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="80dp"
+                    android:layout_marginTop="16dp"
                     android:orientation="horizontal"
-                    android:paddingStart="0dp"
-                    android:paddingEnd="0dp">
+                    android:paddingStart="16dp"
+                    android:paddingEnd="16dp">
 
                     <!-- CardView for Recommendation -->
                     <androidx.cardview.widget.CardView
-                        android:layout_width="90dp"
+                        android:layout_width="0dp"
                         android:layout_height="150dp"
                         android:layout_marginEnd="8dp"
-                        android:layout_weight="0.5"
+                        android:layout_weight="1"
                         android:background="#BBF246"
                         app:cardCornerRadius="8dp"
                         app:cardElevation="4dp">
 
-                        <LinearLayout
+                        <androidx.constraintlayout.widget.ConstraintLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:background="#BBF246"
-                            android:orientation="vertical"
                             android:padding="16dp">
 
                             <TextView
-                                android:layout_width="138dp"
-                                android:layout_height="wrap_content"
+                                android:id="@+id/recommendationLabel"
+                                android:layout_width="114dp"
+                                android:layout_height="33dp"
                                 android:fontFamily="@font/inter_semibold"
-                                android:gravity="center"
                                 android:text="Recommendation"
-                                android:textSize="15sp" />
+                                android:textSize="13sp"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="parent" />
 
                             <ImageView
                                 android:id="@+id/reco_add"
-                                android:layout_width="138dp"
-                                android:layout_height="92dp"
-                                android:background="#BBF246"
-                                android:src="@drawable/plus" />
-                        </LinearLayout>
+                                android:layout_width="87dp"
+                                android:layout_height="81dp"
+                                android:src="@drawable/plus"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toBottomOf="@id/recommendationLabel" />
+
+                        </androidx.constraintlayout.widget.ConstraintLayout>
                     </androidx.cardview.widget.CardView>
 
                     <!-- CardView for Steps -->
                     <androidx.cardview.widget.CardView
                         android:layout_width="0dp"
-                        android:layout_height="match_parent"
+                        android:layout_height="150dp"
                         android:layout_weight="1"
                         android:background="#191D1A"
                         app:cardCornerRadius="8dp"
                         app:cardElevation="4dp">
 
-                        <LinearLayout
+                        <androidx.constraintlayout.widget.ConstraintLayout
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:background="#191D1A"
-                            android:orientation="vertical"
+                            android:background="#1E1E1E"
                             android:padding="16dp">
 
                             <TextView
-                                android:layout_width="123dp"
+                                android:id="@+id/stepsLabel"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:fontFamily="@font/inter_semibold"
-                                android:gravity="center"
                                 android:text="Steps"
                                 android:textColor="#FFFFFF"
-                                android:textSize="18sp" />
+                                android:textSize="12sp"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toTopOf="parent" />
 
                             <TextView
                                 android:id="@+id/stepsTextView"
-                                android:layout_width="121dp"
-                                android:layout_height="93dp"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
                                 android:fontFamily="@font/inter_semibold"
-                                android:gravity="center"
                                 android:text="0"
                                 android:textColor="#FFFFFF"
-                                android:textSize="30sp" />
-                        </LinearLayout>
+                                android:textSize="30sp"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintStart_toStartOf="parent"
+                                app:layout_constraintTop_toBottomOf="@id/stepsLabel"
+                                app:layout_constraintVertical_bias="0.405" />
+
+                        </androidx.constraintlayout.widget.ConstraintLayout>
                     </androidx.cardview.widget.CardView>
                 </LinearLayout>
 
