--- a/app/src/main/res/layout/recommend.xml
+++ b/app/src/main/res/layout/recommend.xml
@@ -1,10 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Recommend">
+  <ScrollView
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:background="#89D3A2"
+      android:layout_above="@id/bottom_navigation">
+  <LinearLayout
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:background="#89D3A2"
+      android:orientation="vertical">
 
-  </androidx.constraintlayout.widget.ConstraintLayout>
+  <androidx.appcompat.widget.Toolbar
+      android:id="@+id/toolbar"
+      android:layout_width="match_parent"
+      android:layout_height="?attr/actionBarSize"
+      android:background="#141E30"
+      android:paddingStart="0dp"
+      android:paddingLeft="0dp">
+
+    <TextView
+        android:id="@+id/toolbar_title1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:fontFamily="@font/inter_bold"
+        android:gravity="center"
+        android:paddingLeft="0dp"
+        android:text="Recommendation"
+        android:textColor="#FFFFFF"
+        android:textSize="23sp" />
+  </androidx.appcompat.widget.Toolbar>
+
+  <TextView
+      android:id="@+id/healthyDietTextView"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_below="@id/toolbar"
+      android:layout_marginStart="16dp"
+      android:layout_marginTop="16dp"
+      android:text="Healthy diet"
+      android:textSize="18sp"
+      android:textStyle="bold"
+      android:textColor="#000" />
+
+  <androidx.viewpager2.widget.ViewPager2
+      android:id="@+id/healthyDietViewPager"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+     android:layout_below="@id/healthyDietTextView"
+      android:layout_marginTop="8dp"
+      android:paddingStart="16dp"
+      android:clipToPadding="false"
+      android:clipChildren="false"
+      app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+      android:orientation="horizontal" />
+
+  <TextView
+      android:id="@+id/bulkingDietTextView"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_below="@id/healthyDietViewPager"
+      android:layout_marginTop="40dp"
+      android:layout_marginStart="16dp"
+      android:text="Bulking diet"
+      android:textSize="18sp"
+      android:textStyle="bold"
+      android:textColor="#000" />
+
+  <androidx.viewpager2.widget.ViewPager2
+      android:id="@+id/bulkingDietViewPager"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:layout_below="@id/bulkingDietTextView"
+      android:layout_marginTop="8dp"
+      android:paddingStart="16dp"
+      android:clipToPadding="false"
+      android:clipChildren="false"
+      app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+      android:orientation="horizontal" />
+  </LinearLayout>
+  </ScrollView>
+
+
+  <com.google.android.material.bottomnavigation.BottomNavigationView
+      android:id="@+id/bottom_navigation"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:background="#1E1E1E"
+      android:layout_alignParentBottom="true"
+      app:itemIconTint="@color/bottom_nav_colors"
+      app:itemTextColor="@color/bottom_nav_colors"
+      app:labelVisibilityMode="labeled"
+      app:menu="@menu/bottom_nav_menu" />
+
+</RelativeLayout>
