--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -5,5 +5,6 @@
         <item>@font/inter_bold</item>
         <item>@font/inter_medium</item>
         <item>@font/inter_semibold</item>
+        <item>@font/questrial</item>
     </array>
 </resources>
