--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -240,7 +240,7 @@
 
         <!-- Bottom Navigation View -->
         <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/bottom_navigation"
+            android:id="@+id/bottom_navigation_about"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#1E1E1E"
