--- a/app/src/main/res/layout/recommend.xml
+++ b/app/src/main/res/layout/recommend.xml
@@ -9,7 +9,7 @@
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:background="#89D3A2"
-      android:layout_above="@id/bottom_navigation">
+      android:layout_above="@id/bottom_navigation_about">
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
@@ -89,7 +89,7 @@
 
 
   <com.google.android.material.bottomnavigation.BottomNavigationView
-      android:id="@+id/bottom_navigation"
+      android:id="@+id/bottom_navigation_about"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="#1E1E1E"
