--- a/app/src/main/res/layout/gym.xml
+++ b/app/src/main/res/layout/gym.xml
@@ -17,10 +17,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
     <FrameLayout
-        android:id="@+id/mapContainer"
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"/>
+        android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@id/recyclerView_gym"
+        app:layout_constraintBottom_toTopOf="@id/bottom_navigation_gym"/>
+
+
+
 
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
