--- a/app/src/main/res/layout/cardview_meal.xml
+++ b/app/src/main/res/layout/cardview_meal.xml
@@ -1,11 +1,13 @@
 <!-- card_meal.xml -->
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:layout_marginTop="10dp"
+    android:layout_marginBottom="10dp"
     android:layout_height="wrap_content">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:padding="16dp">
 
         <ImageView
@@ -20,7 +22,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/mealImageView"
             android:text="Meal Name"
-            android:textSize="18sp"/>
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/caloriesTextView"
@@ -28,7 +30,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/mealNameTextView"
             android:text="Calories"
-            android:textSize="14sp"/>
+            android:textSize="14sp" />
 
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
