--- a/app/src/main/res/layout/food.xml
+++ b/app/src/main/res/layout/food.xml
@@ -5,6 +5,7 @@
     android:background="@color/backgroundmain"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+
     <!-- SearchView for searching food -->
     <androidx.appcompat.widget.SearchView
         android:id="@+id/search_food"
@@ -32,12 +33,21 @@
         android:padding="10dp"
         android:text="New Meal"
         android:textColor="#FFFFFF" />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/search_food"
+        android:layout_above="@+id/bottom_navigation_food">
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView_food"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/btn_new_meal" />
+        android:layout_below="@id/btn_new_meal"
+        android:layout_marginTop="0dp" />
+
+    </ScrollView>
 
     <!-- BottomNavigationView for navigation -->
     <com.google.android.material.bottomnavigation.BottomNavigationView
