--- a/app/src/main/res/layout/cardview_meal.xml
+++ b/app/src/main/res/layout/cardview_meal.xml
@@ -1,9 +1,9 @@
 <!-- card_meal.xml -->
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:layout_marginTop="120dp"
-    android:layout_marginBottom="0dp"
-    android:layout_height="wrap_content">
+    android:layout_marginBottom="0dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
