--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,5 +12,9 @@
     <color name="gradient_start">#3700B3</color>
     <color name="gradient_end">#25b8d5</color>
     <color name="light_blue">#386BF6</color>
+    <color name="textColor">#FF000000</color> <!-- black -->
+    <color name="hintColor">#FF808080</color> <!-- gray -->
+
+
 
 </resources>
