--- a/app/src/main/res/layout/setting.xml
+++ b/app/src/main/res/layout/setting.xml
@@ -13,7 +13,7 @@
 
 
         <TextView
-            android:id="@+id/textView7"
+            android:id="@+id/Goals"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:text="Goals"
@@ -29,7 +29,7 @@
             android:background="@color/white" />
 
         <TextView
-            android:id="@+id/textView8"
+            android:id="@+id/History"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:text="History"
@@ -43,7 +43,7 @@
             android:layout_height="1dp"
             android:background="@color/white" />
         <TextView
-            android:id="@+id/textView9"
+            android:id="@+id/Account"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:text="Account"
@@ -57,7 +57,7 @@
             android:layout_height="1dp"
             android:background="@color/white" />
         <TextView
-            android:id="@+id/textView10"
+            android:id="@+id/About"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:text="About"
@@ -73,7 +73,7 @@
             android:background="@color/white" />
 
         <TextView
-            android:id="@+id/textView11"
+            android:id="@+id/Workout"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:text="Workout Routine"
@@ -87,7 +87,7 @@
             android:layout_height="1dp"
             android:background="@color/white" />
         <TextView
-            android:id="@+id/textView12"
+            android:id="@+id/Logout"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:text="Log out"
