--- a/app/src/main/res/layout/history.xml
+++ b/app/src/main/res/layout/history.xml
@@ -1,37 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="16dp">
+    tools:context=".History">
 
     <TextView
+        android:id="@+id/textViewHistory"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Weight History"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
+        android:text="History"
+        android:textAppearance="?attr/textAppearanceHeadline6"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"/>
 
-    <!-- Weight Chart Placeholder -->
+    <!-- Placeholder for weight graph -->
     <com.github.mikephil.charting.charts.LineChart
-        android:id="@+id/weightChart"
+        android:id="@+id/chart"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_marginTop="16dp"/>
+        android:layout_height="198dp"
+        android:layout_below="@id/textViewHistory"
+        android:layout_marginTop="18dp" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Food History"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:layout_marginTop="16dp"/>
-
-    <!-- Food History List Placeholder -->
+    <!-- RecyclerView for meal history -->
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/mealHistoryRecyclerView"
+        android:id="@+id/recyclerViewMealHistory"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/chart"
         android:layout_marginTop="16dp"/>
 
-</LinearLayout>
+    <!-- Navigation bar placeholder -->
+    <LinearLayout
+        android:id="@+id/linearLayoutNavBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:orientation="horizontal"
+        android:gravity="center">
+        <!-- Add navigation buttons here -->
+    </LinearLayout>
+</RelativeLayout>
