--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="backgroundmain">#142C59</color>
-    <color name="headerbg">#141E30</color>
+    <color name="headerbg">#263238</color>
     <color name="gradient_start">#3700B3</color>
     <color name="gradient_end">#25b8d5</color>
     <color name="light_blue">#386BF6</color>
